src/test/deca/context/invalid/langage_essentiel/deuxieme_passe/regle_2_3_1.deca
class A {
    int x;
    void x() {
    }
}

// raison : opération partielle ⊕
//  message : « un nom de méthode redéclare un nom de champ »
